feat(product api): added the code for the product api
- Added Product entity
- Added Product Controller
- Added db change logs for the product database
- Split the projection to a seperate service for new orders and updated to load orders products efficiently.
- test cases for the above
